lb-alb-routing/alb-ingress-contextpath-routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb-routing
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: routing-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'

spec:
  ingressClassName: surea-ingress-class
  rules:
  - http: 
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service: 
            name: app3-nginx-nodeport-service
            port: 
              number: 80
      - path: /app1
        pathType: Prefix
        backend: 
          service: 
            name: app1-nginx-nodeport-service
            port: 
              number: 80
      - path: /app2
        pathType: Prefix
        backend: 
          service: 
            name: app2-nginx-nodeport-service
            port: 
              number: 80
